tests/spec/emit/snapshots/ref_temp_var_no_collision.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  struct Box { x: int }
  
  fn make_box() -> Box {
    Box { x: 1 }
  }
  
  fn main() {
    let r = &make_box()
    let ref_1 = 3
    fmt.Println(r.*.x, ref_1)
  }
---
package main

import "fmt"

type Box struct {
	x int
}

func makeBox() Box {
	return Box{x: 1}
}

func main() {
	ref := makeBox()
	r := &ref
	ref_1 := 3
	fmt.Println(r.x, ref_1)
}
