tests/spec/emit/snapshots/reference_go_function_value_wrapping.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:strconv"
  
  fn main() {
    let r: Ref<fn(string) -> Result<int, error>> = &strconv.Atoi
    let _ = r
  }
---
package main

import "strconv"

func main() {
	ref := strconv.Atoi
	r := &ref
	_ = r
}
