tests/spec/emit/snapshots/reference_nested_parens_no_hoist.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct S { x: int }
  
  impl S {
    fn inc(self: mut Ref<S>) { self.x = self.x + 1 }
  }
  
  fn main() {
    let mut s = S { x: 1 }
    let mut r = &((s))
    r.inc()
  }
---
package main

type S struct {
	x int
}

func (s *S) inc() {
	s.x++
}

func main() {
	s := S{x: 1}
	r := &s
	r.inc()
}
