tests/spec/emit/snapshots/reference_to_newtype_field.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nimport \"go:fmt\"\n\nstruct Wrap(int)\n\nfn main() {\n  let w = Wrap(1)\n  let inner = w.0\n  let r = &inner\n  fmt.Println(r.*)\n}\n"
---
package main

import "fmt"

type Wrap int

func main() {
	w := Wrap(1)
	inner := int(w)
	r := &inner
	fmt.Println(*r)
}
