tests/spec/emit/snapshots/reference_to_unit_returning_call.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn noop() {}
  
  fn main() {
    let _ = &noop()
  }
---
package main

func noop() {}

func main() {
	noop()
	ref := struct{}{}
	_ = &ref
}
