tests/spec/emit/snapshots/reference_to_zero_of_unit_is_a_value.snap
---
source: tests/spec/emit/zero.rs
description: |
  
  fn f() -> Ref<()> {
    let p = &zero<()>()
    p
  }
---
package main

func f() *struct{} {
	ref_1 := struct{}{}
	p := &ref_1
	return p
}
