tests/spec/emit/snapshots/regular_call_callee_eval_order_captured.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn f0(x: int) -> int { x + 10 }
  fn f1(x: int) -> int { x + 20 }
  
  fn bump(i: mut Ref<int>) -> int {
    i.* = 1
    0
  }
  
  fn main() {
    let mut i = 0
    let fs = [f0, f1]
    let r = fs[i](bump(&i))
    let _ = r
  }
---
package main

func f0(x int) int {
	return x + 10
}

func f1(x int) int {
	return x + 20
}

func bump(i *int) int {
	*i = 1
	return 0
}

func main() {
	i := 0
	fs := []func(int) int{f0, f1}
	callee := fs[i]
	r := callee(bump(&i))
	_ = r
}
