tests/spec/emit/snapshots/renamed_generic_freshens_colliding_value_param.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import sc "go:strconv"
  
  fn label<sc>(sc_2: int, _tag: sc) -> string {
    sc.Itoa(sc_2)
  }
  
  fn test() -> string {
    label(5, 1)
  }
---
package main

import sc "strconv"

func label[sc_2 any](sc_2_1 int, _ sc_2) string {
	return sc.Itoa(sc_2_1)
}

func test() string {
	return label(5, 1)
}
